Expand intro edits to blog & index.html pages.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -30,8 +30,8 @@
         <h1 class="headline">Reuben Mulholland</h1>
         <p class="roles">
           <span class="roles-cert">AWS Certified Solutions Architect - Associate (SAA)</span><br>
-          <span class="roles-sub">Focused on Cloud Engineering, DevOps, and Solutions Architecture</span><br>
-          <span class="roles-looking">Bridging technical execution with product leadership</span>
+          <span class="roles-sub">Focused on SaaS, Cloud & Cybersecurity industries</span><br>
+          <span class="roles-looking">Interested in working together? Connect with me on LinkedIn.</span>
         </p>
         <p class="visitors">
           <a href="post-crc.html" class="project-link">   
