Index minor tweaks all over.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -96,7 +96,7 @@
     <section class="section">
       <h3 class="kicker">Projects</h3>
 
-      <h4 class="subkicker">Completed</h4>
+      <h4 class="subkicker">Completed - click a card to read more</h4>
       <div class="cards">
         <!-- Cloud Resume Challenge -->
         <a href="post-crc.html" class="project-link"> 
@@ -106,7 +106,7 @@
             <div class="badges">
               <span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JavaScript</span>
               <span class="badge">CloudFront</span><span class="badge">S3</span><span class="badge">DNS</span>
-              <span class="badge">Route 53</span><span class="badge">ACM</span>
+              <span class="badge">Route53</span><span class="badge">ACM</span>
               <span class="badge">API Gateway</span><span class="badge">Lambda</span><span class="badge">Python</span>
               <span class="badge">boto3</span><span class="badge">DynamoDB</span>
               <span class="badge">SAM</span><span class="badge">CloudFormation</span><span class="badge">YAML</span>
@@ -133,8 +133,8 @@
           </article>
         </a>
       </div>
-
-      <h4 class="subkicker">Up Next</h4>
+      
+      <h4 class="subkicker"><br>Up Next</h4>
       <div class="cards">
         <article class="card">
           <h4>Observability & Access</h4>
@@ -156,6 +156,8 @@
           </p>
           <div class="badges">
             <span class="badge">Budgets</span><span class="badge">SNS</span><span class="badge">Lambda</span>
+            <span class="badge">API Gateway</span><span class="badge">S3</span>
+            <span class="badge">Route53</span>
           </div>
         </article>
 
@@ -163,11 +165,12 @@
           <h4>Containers/Kubernetes</h4>
           <p>
             Extend the promotion model to containerized workloads using Docker + ECR, orchestrated via ECS or EKS with
-            GitHub Actions.
+            GitHub Actions and provisioned using Terraform.
           </p>
           <div class="badges">
             <span class="badge">Docker</span><span class="badge">ECR</span>
             <span class="badge">ECS/EKS</span><span class="badge">CI/CD</span>
+            <span class="badge">Terraform</span><span class="badge">Kubernetes</span>
           </div>
         </article>
       </div>
