Move profile.jpg to top right.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -24,7 +24,7 @@
   <div id="spotlight" aria-hidden="true"></div>
 
   <header class="shell">
-    <div class="intro">
+    <div class="intro top-right">
       <img src="profile.jpg" alt="Reuben Mulholland" class="avatar" />
       <div>
         <h1 class="headline">Reuben Mulholland</h1>
