About me enhancement.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -31,7 +31,7 @@
         <p class="roles">
           <span class="roles-cert">AWS Certified Solutions Architect - Associate (SAA)</span><br>
           <span class="roles-sub">Focused on SaaS, Cloud & Cybersecurity industries</span><br>
-          <span class="roles-looking">Interested in working together? Connect with me on LinkedIn.</span>
+          <span class="roles-looking">Interested in working together? Connect with me on LinkedIn</span>
         </p>
         <p class="visitors">
           <a href="post-crc.html" class="project-link">   
@@ -86,10 +86,7 @@
         Cloud builder with a background in engineering and product leadership. Experienced in IaC, CI/CD pipelines, and multi-account AWS architectures. Blend hands-on execution with product ownership, ensuring systems are robust, secure, and aligned to business goals.
       </p>
       <p>
-      Interested in working together? Connect with me on
-        <a class="softlink" href="https://www.linkedin.com/in/reubenmulholland" target="_blank" rel="noopener">LinkedIn</a> 
-        or explore more on 
-        <a class="softlink" href="https://github.com/zReuben" target="_blank" rel="noopener">GitHub</a>.
+        Check out my projects and blog posts to see the build details behind the headlines. More updates are on the way.
       </p>
     </section>
 
