Fix intro on blog/resume pages. Fix nav on mobile.

--- a/resume-site/blog.html
+++ b/resume-site/blog.html
@@ -19,7 +19,7 @@
         <p class="roles">
           <span class="roles-cert">AWS Certified Solutions Architect - Associate (SAA)</span><br>
           <span class="roles-sub">Focused on SaaS, Cloud & Cybersecurity industries</span><br>
-          <span class="roles-looking">Interested in working together? Connect with me on LinkedIn.</span>
+          <span class="roles-looking">Interested in working together? Connect with me on LinkedIn</span>
         </p>
       </div>
     </div>
