--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -93,7 +93,11 @@
     <section class="section">
       <h3 class="kicker">Projects</h3>
 
-      <h4 class="subkicker">Completed - click a card to read more</h4>
+      <h4 class="subkicker">
+        Completed - select below or 
+        <a href="blog.html" class="softlink">view blogs</a>
+        to learn more
+      </h4>
       <div class="cards">
         <!-- Cloud Resume Challenge -->
         <a href="post-crc.html" class="project-link"> 
