Home page refactor.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -104,6 +104,12 @@
           <article class="card">
             <h4>Cloud Resume Challenge</h4>
             <h4>(Webpage & Visitor Count)</h4>
+            <p>
+              I wanted to take the concepts from my AWS Solutions Architect Associate certification
+              and apply them in practice. This project touches almost every part of the cloud stack:
+              <strong>serverless infrastructure, Infrastructure-as-Code, CI/CD automation, and security</strong>.
+              The result is a hands-on proof that ties theory to a live, production-ready system.
+            </p>
             <div class="badges">
               <span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JavaScript</span>
               <span class="badge">CloudFront</span><span class="badge">S3</span><span class="badge">DNS</span>
@@ -121,6 +127,12 @@
         <a href="post-multi-account.html" class="project-link"> 
           <article class="card">
             <h4>Multi-Account + CI/CD Promotion Pipeline</h4>
+            <p>
+              After completing the CRC, I wanted to push further into <strong>professional-grade workflows</strong>.
+              This project explores how real companies implement <strong>multi-account / multi-environment deployments</strong>,
+              with GitHub Actions, approvals, OIDC auth, and rollback automation. It also serves as my own “sandbox”
+              to safely experiment without breaking production.
+            </p>
             <div class="badges">
               <span class="badge">AWS Organizations</span><span class="badge">MFA</span>
               <span class="badge">GitHub Actions</span><span class="badge">Immutable Artifact Promotion</span>
