--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -94,9 +94,7 @@
       <h3 class="kicker">Projects</h3>
 
       <h4 class="subkicker">
-        Completed - select below or 
-        <a href="blog.html" class="softlink">view blogs</a>
-        to learn more
+        Completed
       </h4>
       <div class="cards">
         <!-- Cloud Resume Challenge -->
@@ -110,6 +108,7 @@
               <strong>serverless infrastructure, Infrastructure-as-Code, CI/CD automation, and security</strong>.
               The result is a hands-on proof that ties theory to a live, production-ready system.
             </p>
+            <p><a class="link-chip" href="post-crc.html">Read blog</a></p>
             <div class="badges">
               <span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JavaScript</span>
               <span class="badge">CloudFront</span><span class="badge">S3</span><span class="badge">DNS</span>
@@ -133,6 +132,7 @@
               with GitHub Actions, approvals, OIDC auth, and rollback automation. It also serves as my own “sandbox”
               to safely experiment without breaking production.
             </p>
+            <p><a class="link-chip" href="post-multi-account.html">Read blog</a></p>
             <div class="badges">
               <span class="badge">AWS Organizations</span><span class="badge">MFA</span>
               <span class="badge">GitHub Actions</span><span class="badge">Immutable Artifact Promotion</span>
