Home page refactor fix try #1.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -98,7 +98,6 @@
       </h4>
       <div class="cards">
         <!-- Cloud Resume Challenge -->
-        <a href="post-crc.html" class="project-link"> 
           <article class="card">
             <h4>Cloud Resume Challenge</h4>
             <h4>(Webpage & Visitor Count)</h4>
@@ -108,7 +107,8 @@
               <strong>serverless infrastructure, Infrastructure-as-Code, CI/CD automation, and security</strong>.
               The result is a hands-on proof that ties theory to a live, production-ready system.
             </p>
-            <p><a class="link-chip" href="post-crc.html">Read blog</a></p>
+                      <p><a class="link-chip" href="post-crc.html">Read</a></p>
+
             <div class="badges">
               <span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JavaScript</span>
               <span class="badge">CloudFront</span><span class="badge">S3</span><span class="badge">DNS</span>
@@ -121,9 +121,7 @@
               <span class="badge">100% IaC</span>
             </div>
           </article>
-        </a>
           <!-- Multi-Account + CI/CD -->
-        <a href="post-multi-account.html" class="project-link"> 
           <article class="card">
             <h4>Multi-Account + CI/CD Promotion Pipeline</h4>
             <p>
@@ -144,7 +142,6 @@
               <span class="badge">OIDC - no long-lived keys</span>
             </div>
           </article>
-        </a>
       </div>
       
       <h4 class="subkicker"><br>Up Next</h4>
