Home page refactor & blog pages refactors (plan to remove blog page).

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -107,7 +107,7 @@
               <strong>serverless infrastructure, Infrastructure-as-Code, CI/CD automation, and security</strong>.
               The result is a hands-on proof that ties theory to a live, production-ready system.
             </p>
-                      <p><a class="link-chip" href="post-crc.html">Read</a></p>
+            <p><a class="link-chip" href="post-crc.html">Read blog</a></p>
 
             <div class="badges">
               <span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JavaScript</span>
