--- a/resume-site/post-multi-account.html
+++ b/resume-site/post-multi-account.html
@@ -45,7 +45,7 @@
       <h2>Build once, promote safely across ENG → TEST → PROD</h2>
 
       <div class="keylinks">
-        <a class="link-chip" href="https://github.com/zReuben" target="_blank" rel="noopener">GitHub</a><a class="link-chip" href="blog.html">← Back to Blog</a>
+        <a class="link-chip" href="https://github.com/zReuben" target="_blank" rel="noopener">GitHub</a><a class="link-chip" href="index.html">← Back to home</a>
       </div>
 
       <p>
