--- a/resume-site/post-crc.html
+++ b/resume-site/post-crc.html
@@ -48,7 +48,7 @@
         <a class="link-chip" href="https://cloudresumechallenge.dev" target="_blank" rel="noopener">CloudResumeChallenge.dev</a>
         <a class="link-chip" href="https://reubenmulholland.com" target="_blank" rel="noopener">Live Site</a>
         <a class="link-chip" href="https://github.com/zReuben" target="_blank" rel="noopener">GitHub</a>
-        <a class="link-chip" href="blog.html">← Back to Blog</a>
+        <a class="link-chip" href="index.html">← Back to home</a>
       </div>
 
       <p>
