--- a/resume-site/post-crc.html
+++ b/resume-site/post-crc.html
@@ -12,6 +12,18 @@
   <div id="spotlight" aria-hidden="true"></div>
 
   <header class="shell">
+    <div class="intro top-right">
+      <img src="profile.jpg" alt="Reuben Mulholland" class="avatar" />
+      <div>
+        <h1 class="headline">Reuben Mulholland</h1>
+        <p class="roles">
+          <span class="roles-cert">AWS Certified Solutions Architect - Associate (SAA)</span><br>
+          <span class="roles-sub">Focused on SaaS, Cloud & Cybersecurity industries</span><br>
+          <span class="roles-looking">Interested in working together? Connect with me on LinkedIn</span>
+        </p>
+        
+      </div>
+    </div>
     <nav class="topnav" aria-label="Primary">
       <a href="index.html" class="home-link" title="Home">
         <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn">
@@ -23,10 +35,6 @@
       <a href="resume.html">
         <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zm1 7h5l-5-5v5zM8 13h8v2H8v-2zm0 4h8v2H8v-2z"/></svg>
         <span>View Resume</span>
-      </a>
-      <a href="blog.html">
-        <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn"><path d="M6 2h11a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H6a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3zm0 2a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h1V4H6zm3 0v16h8V4H9zm2 3h4v2h-4V7zm0 4h4v2h-4v-2zm0 4h3v2h-3v-2z"/></svg>
-        <span>Read Blogs</span>
       </a>
       <a href="https://www.linkedin.com/in/reuben-mulholland/" target="_blank" rel="noopener">
         <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn"><path d="M20.45 20.45h-3.57v-5.6c0-1.34-.02-3.06-1.87-3.06-1.88 0-2.17 1.47-2.17 2.97v5.69H9.28V9.5h3.42v1.49h.05c.48-.9 1.66-1.85 3.42-1.85 3.66 0 4.34 2.41 4.34 5.55v5.76zM5.34 8.01a2.07 2.07 0 1 1 0-4.14 2.07 2.07 0 0 1 0 4.14zM7.12 20.45H3.56V9.5h3.56v10.95z"/></svg>
@@ -160,7 +168,7 @@
         <a class="link-chip" href="https://cloudresumechallenge.dev" target="_blank" rel="noopener">Cloud Resume Challenge</a>
         <a class="link-chip" href="https://reubenmulholland.com" target="_blank" rel="noopener">Live Site</a>
         <a class="link-chip" href="https://github.com/zReuben" target="_blank" rel="noopener">GitHub</a>
-        <a class="link-chip" href="blog.html">← Back to Blog</a>
+        <a class="link-chip" href="index.html">← Back to home</a>
       </p>
     </section>
   </main>
