Intro update, resume page update.

--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -27,7 +27,6 @@
         <h1 class="headline">Reuben Mulholland</h1>
         <p class="roles">
           <span class="roles-cert">AWS Certified Solutions Architect - Associate (SAA)</span><br>
-          <span class="roles-sub">Focused on SaaS, Cloud & Cybersecurity industries</span><br>
           <span class="roles-looking">Interested in working together? Connect with me on LinkedIn</span>
         </p>
       </div>
@@ -68,7 +67,7 @@
   <main class="shell">
     <section class="section">
       <p style="margin:.5rem 0 1rem 0">
-        I’m pursuing opportunities across <strong>SaaS, Cloud, and Cybersecurity</strong> industries, bringing two complementary strengths: hands-on technical expertise and proven product management leadership.
+        With strengths in both AWS cloud engineering and product management, I pursue two career tracks — each represented in the resumes below.
         <br><br>
       </p>
       <h3 class="kicker">Resumes</h3>
