Alignment fix, footer css removal, roles cleanup, intro alignment.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -29,10 +29,15 @@
       <div>
         <h1 class="headline">Reuben Mulholland</h1>
         <p class="roles">
-          <span class="roles-cert">AWS Certified Solutions Architect - Associate (SAA)</span><br>
-          <span class="roles-looking">Interested in working together? Connect with me on LinkedIn</span>
-          <a href="post-crc.html" class="project-link">   
-            <em class="pill pill--subtle">Live API visitor count: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></em>
+          <span class="roles-cert">AWS Certified Solutions Architect - Associate (SAA)</span>
+          <span>Interested in working together? Connect with me on LinkedIn</span>
+
+          <!-- pill goes on its own line because of the CSS above -->
+          <a href="post-crc.html" class="project-link">
+            <em class="pill pill--subtle">
+              Live API visitor count: <span id="replaceme"></span>
+              <span id="spinner" class="spinner" style="display:none;"></span>
+            </em>
           </a>
         </p>
       </div>
