Resume page api count get test.

--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -32,7 +32,7 @@
           <!-- pill goes on its own line because of the CSS above -->
           <a href="post-crc.html" class="project-link">
             <em class="pill pill--subtle">
-              Live API visitor count: <span id="replaceme"></span>
+              Live API visitor count: <span id="resumeCount"></span>
               <span id="spinner" class="spinner" style="display:none;"></span>
             </em>
           </a>
