Blog visitor count read fix.

--- a/resume-site/post-multi-account.html
+++ b/resume-site/post-multi-account.html
@@ -146,10 +146,6 @@
 
     </section>
   </main>
-
-  <footer class="shell footer">
-    <p>&copy; <span id="y"></span> Reuben Mulholland</p>
-  </footer>
-  <script>document.getElementById('y').textContent=new Date().getFullYear();</script>
+  <script src="visitorCountRead.js?v=1"></script>
 </body>
 </html>
