--- a/resume-site/post-crc.html
+++ b/resume-site/post-crc.html
@@ -178,11 +178,6 @@
       </p>
     </section>
   </main>
-
-
-  <footer class="shell footer">
-    <p>&copy; <span id="y"></span> Reuben Mulholland</p>
-  </footer>
-  <script>document.getElementById('y').textContent=new Date().getFullYear();</script>
+  <script src="visitorCountRead.js?v=1"></script>
 </body>
 </html>
