Add blog placeholders.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -102,7 +102,7 @@
               <strong>serverless infrastructure, Infrastructure-as-Code, CI/CD automation, and security</strong>.
               The result is a hands-on proof that ties theory to a live, production-ready system.
             </p>
-            <p><a class="link-chip" href="post-crc.html">Read blog</a></p>
+            <p><a class="link-chip" href="post-placeholder.html">Read blog</a></p>
 
             <div class="badges">
               <span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JavaScript</span>
@@ -125,7 +125,7 @@
               with GitHub Actions, approvals, OIDC auth, and rollback automation. It also serves as my own “sandbox”
               to safely experiment without breaking production.
             </p>
-            <p><a class="link-chip" href="post-multi-account.html">Read blog</a></p>
+            <p><a class="link-chip" href="post-placeholder.html">Read blog</a></p>
             <div class="badges">
               <span class="badge">AWS Organizations</span><span class="badge">MFA</span>
               <span class="badge">GitHub Actions</span><span class="badge">Immutable Artifact Promotion</span>
