Placeholder page minor edit.

--- a/resume-site/post-placeholder.html
+++ b/resume-site/post-placeholder.html
@@ -55,9 +55,8 @@
 
   <main class="shell">
     <section class="section card">
-      <h3 class="kicker">Blog Page Placeholder</h3>
+      <h3 class="kicker">Placeholder page</h3>
       <h2>Blog posts coming soon by/before 9-12-2025.</h2>
-
       <div class="keylinks">
         <a class="link-chip" href="index.html">← Back to home</a>
       </div>
