--- a/resume-site/post-placeholder.html
+++ b/resume-site/post-placeholder.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Cloud Resume Challenge • Deep Dive</title>
   <meta name="description" content="End-to-end case study of my Cloud Resume Challenge: static website, serverless API, IaC with SAM/CloudFormation, CI/CD with GitHub Actions, and security hardening."/>
+  
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"/>
 </head>
