--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Reuben Mulholland — Cloud Engineer | DevOps | Solutions Architect</title>
-  <meta name="description" content="AWS cloud engineer building multi-account, IaC-first systems with CI/CD, OIDC, and CloudFront/API Gateway/Lambda/DynamoDB. Promotion-based pipeline from ENG to TEST to PROD.">
-  <meta property="og:title" content="Reuben Mulholland — Cloud Engineer | DevOps | Solutions Architect">
-  <meta property="og:description" content="AWS multi-account portfolio: IaC, CI/CD, CloudFront/S3, API Gateway/Lambda/DynamoDB.">
+  <title>Reuben Mulholland — AWS SAA</title>
+  <meta name="description" content="Cloud builder with a background in engineering and product leadership.">
+  <meta property="og:title" content="Reuben Mulholland — Website">
+  <meta property="og:description" content="AWS, IaC, CI/CD, CloudFront/S3, API Gateway/Lambda/DynamoDB.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://reubenmulholland.com">
   <meta property="og:image" content="https://reubenmulholland.com/profile.jpg">
