--- a/resume-site/post-multi-account.html
+++ b/resume-site/post-multi-account.html
@@ -5,8 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Multi-Account + CI/CD Promotion Pipeline</title>
   <meta name="description" content="ENG→TEST→PROD promotion using a single immutable artifact, environment approvals, OIDC to AWS, SSM-driven config, and one-minute targeted rollbacks."/>
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="spotlight" aria-hidden="true"></div>
