Page title  updates.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Reuben Mulholland — AWS SAA</title>
+  <title>Reuben Mulholland — Home</title>
   <meta name="description" content="Cloud builder with a background in engineering and product leadership.">
   <meta property="og:title" content="Reuben Mulholland — Website">
   <meta property="og:description" content="AWS, IaC, CI/CD, CloudFront/S3, API Gateway/Lambda/DynamoDB.">
