--- a/resume-site/post-placeholder.html
+++ b/resume-site/post-placeholder.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Cloud Resume Challenge • Deep Dive</title>
+  <title>Blog Placeholder</title>
   <meta name="description" content="End-to-end case study of my Cloud Resume Challenge: static website, serverless API, IaC with SAM/CloudFormation, CI/CD with GitHub Actions, and security hardening."/>
   
   <link rel="icon" href="/favicon.ico" sizes="any">
